--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.20)
 project(ModernTech)
 
-find_package(OpenCV REQUIRED)
-
 add_executable(app main.cpp)
+
+add_subdirectory(ImageProcessing)
+target_link_libraries(app PRIVATE imgProc)
+
+file(COPY test_data DESTINATION ${CMAKE_BINARY_DIR})
