--- a/.github/workflows/gtest.yml
+++ b/.github/workflows/gtest.yml
@@ -3,10 +3,10 @@ name: Building and Testing
 on:
   push:
     branches:
-      - main
+      - master
   pull_request:
     branches:
-      - main
+      - master
 
 jobs:
   build-and-test:
